--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3"
@@ -39,6 +40,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.2.0"
