--- a/package.json
+++ b/package.json
@@ -6,16 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "npx ultracite lint",
     "preview": "vite preview",
-    "format": "npx prettier . --write",
+    "format": "npx ultracite format --unsafe",
     "prepare": "husky"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx,js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ]
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.7",
@@ -32,10 +26,10 @@
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.2",
     "@eslint-react/eslint-plugin": "^1.45.3",
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.4",
@@ -55,8 +49,10 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.29.1",
+    "ultracite": "^5.2.11",
     "vite": "^6.2.0"
   }
 }
