--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gsap": "^3.13.0",
     "leva": "^0.10.1",
     "lucide-react": "^0.488.0",
+    "postprocessing": "^6.38.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
