--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
+    "@dyad-sh/react-vite-component-tagger": "^0.8.0",
     "@eslint-react/eslint-plugin": "^1.45.3",
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.4",
