--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.488.0",
+    "motion": "^12.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
