--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
+		"nodemailer": "^7.0.12",
 		"openai": "^4.73.0",
 		"winston": "^3.17.0",
 		"zod": "^3.23.8"
@@ -24,6 +25,7 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
 		"@types/node": "^22.10.0",
+		"@types/nodemailer": "^7.0.5",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.2"
 	}
