--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
