--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
