--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "start": "vite run",
+    "start": "serve -s dist -l 8080",
     "preview": "vite preview",
     "format": "prettier \"**/*.{js,jsx,ts,tsx,md,html,css}\" --write && biome format --write .",
     "lint": "biome check .",
@@ -30,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "serve": "^14.2.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0"
   },
