--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "start": "serve -s dist -l 8080",
+    "start": "node server.js",
     "preview": "vite preview",
     "format": "prettier \"**/*.{js,jsx,ts,tsx,md,html,css}\" --write && biome format --write .",
     "lint": "biome check .",
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "express": "^4.22.1",
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.488.0",
     "motion": "^12.24.11",
